move to peerDeps

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-config-utils",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Modify your config.xml after cordova prepare",
    "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
     "Diego Netto"
   ],
   "license": "MIT",
-  "dependencies": {
+  "peerDependencies": {
     "elementtree": "^0.1.6",
     "lodash": "^3.10.1",
     "plist": "^1.1.0"
