--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "peerDependencies": {
     "elementtree": "^0.1.6",
     "lodash": "^3.10.1",
-    "plist": "^1.1.0"
+    "plist": "^1.1.0",
+    "xcode": "^0.8.2"
   }
 }
